crates/jsonschema-codegen/tests/ui/invalid_max_properties_value.stderr
error: -1 is less than the minimum of 0
 --> tests/ui/invalid_max_properties_value.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"type":"object","maxProperties":-1}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
